--- a/src/Styles/HomeStyle.css
+++ b/src/Styles/HomeStyle.css
@@ -1,8 +1,14 @@
 .container{
     flex-wrap: wrap;
     margin: 0px 20px;
+    margin-top: 20px;
 }
 .footer{
     margin-left: 200px;
     margin-top:200px;
 }
+#outlined-basic{
+    text-align: center;
+    
+}
+ 
