fix fage a list
action :location
circle bar

--- a/src/Styles/HomeStyle.css
+++ b/src/Styles/HomeStyle.css
@@ -18,4 +18,10 @@
 .swal-input{
     direction: rtl;
 }
+.MuiAutocomplete-option{
+    direction: rtl;
+}
+.MuiAutocomplete-noOptions{
+    direction: rtl;
+}
  
