--- a/src/Styles/ProductCartStyle.css
+++ b/src/Styles/ProductCartStyle.css
@@ -20,6 +20,8 @@ img{
     border:none;
     max-width: 100%;
 }
-/* .footer{
-    position: sticky;
-} */
+.compareList > svg {
+    width: 100;
+    height:100
+    
+}
