--- a/src/Styles/ProductCartStyle.css
+++ b/src/Styles/ProductCartStyle.css
@@ -1,8 +1,10 @@
+
+
 #compareList{
-    margin-top: 15px;
     overflow: hidden;
     overflow-x: scroll;
     white-space: nowrap;
+    margin:15px
 }
 .product{
     display: inline-block;
@@ -15,13 +17,31 @@
 #compareList .product img{
     width:90px;
     height:auto;
-}
-img{
+} 
+ img{
     border:none;
     max-width: 100%;
 }
-.compareList > svg {
+
+ .compareList > svg {
     width: 100;
-    height:100
+    height:100;
     
+}
+
+.product-text{
+    font-size: 15px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.productSerarch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.productSerarch > img {
+    width:50px;
+    height:50px
 }
