--- a/src/Styles/SuperMarketListStyle.css
+++ b/src/Styles/SuperMarketListStyle.css
@@ -10,12 +10,16 @@
     width: 100vw;
     height: 65vh;
     box-shadow: 0 0 20px 0px black;
+   
 }
 
-.SwipeableList_swipeableList__1FACG, .SwipeableListItem_content__3wbMa {
+ 
+#productCart-list > .SwipeableList_swipeableList__1FACG  .SwipeableListItem_content__3wbMa {
     /* override the original API */
-    background: #f7f7a8;
+    background:#f7f7a9a6
 }
+
+
 
 .swipeLeft-divs, .swipeRight-divs {
     width: 100vw;
