--- a/src/Styles/SuperMarketListStyle.css
+++ b/src/Styles/SuperMarketListStyle.css
@@ -10,16 +10,16 @@
     width: 100vw;
     height: 65vh;
     box-shadow: 0 0 20px 0px black;
-   
 }
 
- 
-#productCart-list > .SwipeableList_swipeableList__1FACG  .SwipeableListItem_content__3wbMa {
+#productCart-list>.SwipeableList_swipeableList__1FACG .SwipeableListItem_content__3wbMa {
     /* override the original API */
-    background:#f7f7a9a6
+    background: #ffffff00;
 }
 
-
+.SwipeableList_swipeableList__1FACG {
+    background: #f3f3bb;
+}
 
 .swipeLeft-divs, .swipeRight-divs {
     width: 100vw;
