--- a/src/Styles/ProductCartStyle.css
+++ b/src/Styles/ProductCartStyle.css
@@ -15,9 +15,9 @@
 }
 
 #compareList .product img{
-     width:90px; 
+     width:90px;
     height:auto;
-} 
+}
  img{
     border:none;
     max-width: 100%;
@@ -26,7 +26,6 @@
  .compareList > svg {
     width: 100;
     height:100;
-    
 }
 
 .product-text{
@@ -35,14 +34,29 @@
 }
 
 .productSerarch{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: center; 
     text-align: center;
 }
 
-.productSerarch > img {
-    width:100px;
-    height:100px
+
+.card{
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+    margin: 4px;
+    float:right;
+    height:280px;
+    width:150px
 }
 
+
+.card-img, .card-img-bottom, .card-img-top {
+     margin-top:10px; 
+     max-width: 120px;
+    max-height: 100px   
+}
+.card-body{
+    flex: 1 14 auto;
+    min-height: 1px;
+    padding: 0.5em;
+}
